Bug 4476 - readelf -s -D doesn't support --hash-style=gnu
Summary: readelf -s -D doesn't support --hash-style=gnu
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: binutils (show other bugs)
Version: 2.18
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-05-09 00:33 UTC by James Troup
Modified: 2007-10-09 14:03 UTC (History)
4 users (show)

See Also:
Host: i486-linux-gnu
Target: i486-linux-gnu
Build: i486-linux-gnu
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Troup 2007-05-09 00:33:42 UTC
readelf -s -D doesn't support --hash-style=gnu, only both or sysv.

$ readelf -s -D -W /usr/lib/libslang.so 

Dynamic symbol information is not available for displaying symbols.
$
Comment 1 H.J. Lu 2007-05-09 23:55:24 UTC
A patch is posted at

http://sourceware.org/ml/binutils/2007-05/msg00126.html
Comment 2 H.J. Lu 2007-10-09 14:03:03 UTC
Fixed.